# claimy

./: .gitignore  API_REQUIREMENTS.md  Cargo.toml  FRONTEND_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  package.json  tsconfig.json
client/: APITester.tsx  App.tsx  index.tsx
client/api/: client.ts
client/components/auth/: LoginForm.tsx  ProtectedRoute.tsx
client/components/dashboard/: LeaderDashboard.tsx  MemberDashboard.tsx
client/components/layout/: AppLayout.tsx
client/components/resources/: ResourceGrid.tsx
client/components/ui/: button.tsx  card.tsx  form.tsx  input.tsx  label.tsx  select.tsx
client/stores/: authStore.ts
client/types/: index.ts
database/: Cargo.toml
database/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
server/src/module_bindings/: mod.rs  set_name_reducer.rs  user_table.rs  user_type.rs
