[package]
name = "server"
edition = "2024"
version = "0.1.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
spacetimedb = "1.1.2"
spacetimedb-sdk = "1.1.2"
log = "0.4"
jsonwebtoken = "9.3.1"
axum = "0.8.4"
serde = "1.0.219"
serde_json = "1.0.140"
tracing-subscriber = "0.3.19"
hex = "0.4.3"
